--- a/index.html
+++ b/index.html
@@ -89,17 +89,24 @@ th, td {
 #section0 {
   h1{
     font-size: 38px;
-    margin-top: 4rem;
+    margin-top: 6rem;
   }
     p{
+      position: absolute;
+      right: 50px;
+      top: 335px;
       text-align: right;
       font-size: 12px;
+      max-width: 350px;
     }
   img{
      max-width: 643px;
     max-height: 838px;
   }
   .reserve-spot {
+    position: absolute;
+    right: 50px;
+    top: 668px;
     margin-top: 2rem;
     text-align: right;
 }
@@ -154,14 +161,28 @@ th, td {
 
 #section4 {
     background-color: #D4D4D4;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  h1{
     color: black;
-  img{
-    max-width: 350px;
-    max-height: 232px;
+    font-size: 30px;
+  }
+  p{
+    color: black;
+    font-size: 16px;
+  }
+  .faq-container {
+    display: flex;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .faq-column {
+    max-width: 514px;
+    padding: 10px;
   }
 }
-
-
 
 @media (max-width: 768px) {
     .navbar ul {
@@ -276,43 +297,34 @@ th, td {
       </p>
     </section>
 
-    <section id="section4">
-        <div class="flex-container">
-            <div class="flex-item">
-                <h1>Frequently Asked Questions</h1>
-<p class="left">
-    <b>1. How old do I need to be to attend?</b><br>
-    This event is for those 19+. Please bring ID for age verification at the door.<br>
-    <br>
-    <b>2. Is there a dress code?</b><br>
-    Wear whatever makes you feel like part of the night!<br>
-    <br>
-    <b>3. What time does the event start and end?</b><br>
-    The event kicks off at 8:00 PM and wraps up at 2:00 AM. Be there early to make the most of the night!<br>
-    <br>
-    <b>4. Can I buy tickets at the door?</b><br>
-    We recommend RSVPing in advance to guarantee your spot. There may be limited availability at the door, so it's best to reserve your place ahead of time.
-  </p>
-  <p class="right">
-    <b>5. What kind of food and drinks will be available?</b><br>
-    We’ll have authentic street food and signature cocktails inspired by the flavours of Hong Kong. Let us know if you have any food allergies when you RSVP.<br>
-    <br>
-    <b>6. Is there parking available?</b><br>
-    There is limited parking around the venue, but we recommend using public transportation or ride share services to make getting to and from the event easier.<br>
-    <br>
-    <b>7. Is smoking allowed at the event?</b><br>
-    Smoking is not permitted inside the venue. If you need to step out for a smoke, please use the designated smoking area outside.<br>
-    <br>
-    <br>
-    <br>
-    <i>Got more questions?<br>
-    Feel free to reach out via email or text!</i>      
-              </p>
-          </div>
-            <div class="flex-item">
-                <img src="LKFSign.jpeg" alt="LKF">
-            </div>
+    <div id="section4">
+    <h1>Frequently Asked Questions</h1>
+    <div class="faq-container">
+        <div class="faq-column">
+            <p><b>1. How old do I need to be to attend?</b><br>
+            This event is for those 19+. Please bring ID for age verification at the door.</p>
+            <p><b>2. Is there a dress code?</b><br>
+            Wear whatever makes you feel like part of the night!</p>
+            <p><b>3. What time does the event start and end?</b><br>
+            The event kicks off at 8:00 PM and wraps up at 2:00 AM. Be there early to make the most of the night!</p>
+            <p><b>4. Can I buy tickets at the door?</b><br>
+            We recommend RSVPing in advance to guarantee your spot. There may be limited availability at the door, so it's best to reserve your place ahead of time.</p>
         </div>
-    </section>
+        <div class="faq-column">
+            <p><b>5. What kind of food and drinks will be available?</b><br>
+            We'll have authentic street food and signature cocktails inspired by the flavours of Hong Kong. Let us know if you have any food allergies when you RSVP.</p>
+            <p><b>6. Is there parking available?</b><br>
+            There is limited parking around the venue, but we recommend using public transportation or ride share services to make getting to and from the event easier.</p>
+            <p><b>7. Is smoking allowed at the event?</b><br>
+            Smoking is not permitted inside the venue. If you need to step out for a smoke, please use the designated smoking area outside.<br>
+            <br>
+            <br>
+            <br>
+            <i>Got more questions?<br>
+            Feel free to reach out via email or text!</i></p>
+        </div>
+    </div>
+    <img src="LKFSign.jpeg" alt="LKF" style="position: relative; max-width: 350px; max-height: 232px; margin-right: auto; margin-left: 152px;">
+</div>
 </body>
 </html>
