--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ th, td {
                   We’ve got moody lights, street food that tastes like midnight, and drinks strong enough to make you forget what time it is. Lose yourself in the sound, the glow, and maybe a little bit of that bittersweet vibe only the best nights out bring.<br>
                   <br>
                   <b>🖤 When: December 12 2024<br></b>
-                  <b>🖤 Where: The Velvet Room<br></b>
+                  <b>🖤 Where: Velvet Underground<br></b>
                   <br>
                   Come as you are, or whoever you feel like being tonight. Just don’t miss the chance to live like the city’s alive for you.
                 <br>                </p>
@@ -304,7 +304,7 @@ th, td {
             <p><b>1. How old do I need to be to attend?</b><br>
             This event is for those 19+. Please bring ID for age verification at the door.</p>
             <p><b>2. Is there a dress code?</b><br>
-            Wear whatever makes you feel like part of the night!</p>
+            Wear whatever you want!</p>
             <p><b>3. What time does the event start and end?</b><br>
             The event kicks off at 8:00 PM and wraps up at 2:00 AM. Be there early to make the most of the night!</p>
             <p><b>4. Can I buy tickets at the door?</b><br>
@@ -314,7 +314,7 @@ th, td {
             <p><b>5. What kind of food and drinks will be available?</b><br>
             We'll have authentic street food and signature cocktails inspired by the flavours of Hong Kong. Let us know if you have any food allergies when you RSVP.</p>
             <p><b>6. Is there parking available?</b><br>
-            There is limited parking around the venue, but we recommend using public transportation or ride share services to make getting to and from the event easier.</p>
+            There is limited parking around the venue, but we recommend using public transportation or ride share services to make getting to and from the event easier. Check out the surrounding area <a href="https://maps.app.goo.gl/HxGSV2pjGD5M14kg6" style="color: black;">here</a>.</p>
             <p><b>7. Is smoking allowed at the event?</b><br>
             Smoking is not permitted inside the venue. If you need to step out for a smoke, please use the designated smoking area outside.<br>
             <br>
