--- a/index.html
+++ b/index.html
@@ -129,12 +129,13 @@ th, td {
     font-size: 18px;
     font-weight: bold;
     color: #EA5858;
-    margin-top: 3rem;
+    margin-top: 4rem;
     margin-left: 2rem;
   } 
   p{
     font-size: 14px;
     margin-left: 2rem;
+    margin-right: 2rem;
 
   }
   .flex-item img{
@@ -173,13 +174,20 @@ th, td {
   background-repeat: no-repeat;
   background-size: cover;
   
-  h1, p{
+  h1 {
     max-width: 772px;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 4rem;
-
+    margin-top: 150px;
+  } 
+  
+  p{
+    max-width: 772px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
   }
 }
 
@@ -205,7 +213,7 @@ th, td {
   }
   .faq-column {
     max-width: 514px;
-    padding: 10px;
+    padding: 20px;
   }
 }
 
@@ -347,7 +355,7 @@ th, td {
             Feel free to reach out via email or text!</i></p>
         </div>
     </div>
-    <img src="LKFSign.jpeg" alt="LKF" style="position: relative; max-width: 350px; max-height: 232px; margin-right: auto; margin-left: 152px;">
+    <img src="LKFSign.jpeg" alt="LKF" style="position: relative; max-width: 350px; max-height: 232px; margin-right: auto; margin-left: 152px; margin-bottom: -30px;">
 </div>
 </body>
 </html>
