--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ th, td {
     font-size: 18px;
     font-weight: bold;
     color: #EA5858;
-    margin-top: 3rem;
+    margin-top: 5rem;
     margin-left: 2rem;
   } 
   p{
@@ -195,9 +195,10 @@ th, td {
   display: flex;
   flex-direction: column;
   h1{
+    position: absolute;
     color: black;
     font-size: 30px;
-    margin-left: 6rem;
+    left: 95px;
   }
   p{
     color: black;
@@ -206,6 +207,7 @@ th, td {
   .faq-container {
     display: flex;
     justify-content: space-between;
+    margin-top: 4rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -271,7 +273,8 @@ th, td {
 
     <section id="section1">
         <div class="flex-item">
-                <h2>Why We're Doing This</h2>
+                <h2><br><br>
+                  Why We're Doing This</h2>
                 <p>
                     Because nightlife should be more than just drinks and music. It should feel like stepping into another world, like you're part of something bigger than yourself. Hong Kong is legendary for nights like that — wild, raw, and unforgettable. So we're bringing the vibe here, for <ins>one night only</ins>.
                 </p>
