--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ th, td {
 
 #section4 {
     background-color: #D4D4D4;
-  padding: 2rem;
+  padding-top: 4rem;
   display: flex;
   flex-direction: column;
   h1{
@@ -356,7 +356,7 @@ th, td {
             Feel free to reach out via email or text!</i></p>
         </div>
     </div>
-    <img src="LKFSign.jpeg" alt="LKF" style="position: relative; max-width: 350px; max-height: 232px; margin-right: auto; margin-left: 152px; margin-bottom: -30px;">
+    <img src="LKFSign.jpeg" alt="LKF" style="position: relative; max-width: 350px; max-height: 232px; margin-right: auto; margin-left: 152px;">
 </div>
 </body>
 </html>
