--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@ th, td {
     position: absolute;
     color: black;
     font-size: 30px;
-    left: 95px;
-    margin-top: 2rem;
+    left: 4rem;
+    margin-top: 4rem;
   }
   p{
     color: black;
@@ -209,7 +209,7 @@ th, td {
   .faq-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 5rem;
+    margin-top: 6rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -351,6 +351,8 @@ th, td {
             There is limited parking around the venue, but we recommend using public transportation or ride share services to make getting to and from the event easier. Check out the surrounding area <a href="https://maps.app.goo.gl/HxGSV2pjGD5M14kg6" style="color: black;">here</a>.</p>
             <p><b>7. Is smoking allowed at the event?</b><br>
             Smoking is not permitted inside the venue. If you need to step out for a smoke, please use the designated smoking area outside.<br>
+            <br>
+            <br>
             <br>
             <br>
             <br>
