--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ th, td {
     position: absolute;
     color: black;
     font-size: 30px;
-    left: 6rem;
+    margin-left: 200px;
     margin-top: 4rem;
   }
   p{
